<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/textHello"/>
    <TextView android:text="@string/ivan_string" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/textIvan" android:layout_below="@+id/textHello"/>
    <TextView android:text="@string/rose_string" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/textRose" android:layout_below="@+id/textIvan"/>
    <TextView android:text="@string/michael_string" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/textMichael" android:layout_below="@+id/textRose"/>
    <TextView android:text="@string/patrick_string" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/textPatrick"  android:layout_below="@+id/textMichael"/>
    <TextView android:text="@string/trish_string" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/textTrish" android:layout_below="@+id/textPatrick"/>
    <TextView android:text="@string/franz_string" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/textFranz"   android:layout_below="@+id/textTrish" />
    <TextView android:text="@string/m3x_string" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/textM3x" android:layout_below="@+id/textFranz" />

</RelativeLayout>
